tests/sksl/errors/golden/UseWithoutInitializeVarDecl.glsl
### Compilation failed:

error: 1: 'x' has not been assigned
1 error
